# speak-playground

./: Cargo.toml  LICENSE.md  README.md  index.html
docs/: index.html
docs/assets/: speak-playground-539db05a12a0b236.js
src/: main.rs
styles/: styles.css
