[package]
name = "speak-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.152"
web-sys = { version = "0.3.61", features = ["HtmlTextAreaElement"] }
yew = { version = "0.20.0", features = ["csr"] }
yewdux = "0.9.0"
core = { git = "https://github.com/muse254/speak", branch = "www" }
